  O TreeView should offer options for ordering children youngest 1st, oldest 1st or as is
  O TreeView should indicate if there's more data that's not shown (e.g. hidden spouses, hidden parents, hidden children)
  O Support for multiple pictures or animated gifs (TreeView repaint?)
  O EditView jump from entity to referencing entity (multiple! "back-link")
  
2.0 - Oct xx 2002

  O TreeView component replaced
  O New ResumeView

1.9.1 - Sep 26 2002

  I Accessing System.getProperty() is done through EnvironmentChecker and logged
  I edit.ProxyFile and edit.ProxyBlob's file dialog default to -Dgenj.gedcom.dir,-Duser.home
  B MenuHelper used Java 1.2 API

1.9 - Aug 30 2002

  N Top button bar allows to toggle "text under button icons' with popup
  I refactored multi-threading into ActionDelegate (ReportView and ControlCenter)
  I file .properties for file .ged is loaded from same location but stored in user.home (local takes precendence)
  N New Report ReportExec which allows to execute a command line tool
  I EditView Buttons are now always visible (shrinking horizontally) when component is sized too small
  N User can choose Look&Feel (with Skin/Theme support) through AboutDialog (download genj_lnf-x.y.zip to enable)
  N A new PropertySex is now unset when created - the user has to choose male/female eventually
  N Special entities REPOSITORY, SOURCE, SUBMITTER are now supported internally
  N NavigatorView
  N Dates are localized in TableView, TimelineView and TreeView now
  B GedcomWriter now writes correct version information
  N A new About window has been added, implementing Welcome, Authors, Feedback and Copyright tabbed panes
  B ReportGedcomStatistics doesn't track death-place anymore for people that haven't died yet
  B Windows (View, Overview) are never places outside of the visible screen